# portfolio-optim-methods

./: .gitignore  README.md  pyproject.toml
additional_features/: README.md
notebooks/: residual_diagnostics.ipynb
scripts/: _test_linear_simplex.py  run_all.py
src/portfolio_optim/: __init__.py  config.py
src/portfolio_optim/data/: __init__.py  generate.py  local_panel.py  splits.py
src/portfolio_optim/evaluation/: __init__.py  metrics.py
src/portfolio_optim/experiments/: reporting.py  run_baseline.py
src/portfolio_optim/ml/: __init__.py  dataset.py  models.py
src/portfolio_optim/portfolio/: __init__.py  covariance.py  objectives.py  solvers.py
tests/: test_covariance.py  test_solvers.py
